--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,22 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 17:49]
+#+CAPTION: Clock summary at [2016-09-26 Mon 18:17]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *6:53* |      |      | 100.0 |
+| *Total time*                                                                | *7:20* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 6:53   |      |      | 100.0 |
-| Active                                                                      |        | 6:53 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   9.7 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.7 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  36.3 |
-| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   4.8 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  25.7 |
-| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   5.3 |
-| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   4.6 |
-| COMPLETED Add path generator to quilt.cpp                                   |        |      | 0:49 |  11.9 |
+| Stories                                                                     | 7:20   |      |      | 100.0 |
+| Active                                                                      |        | 7:20 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   9.1 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.6 |
+| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  34.1 |
+| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   4.5 |
+| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  24.1 |
+| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   5.0 |
+| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   4.3 |
+| COMPLETED Add path generator to quilt.cpp                                   |        |      | 0:49 |  11.1 |
+| COMPLETED Add guard generator to quilt.cpp                                  |        |      | 0:27 |   6.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -204,9 +205,11 @@ inclusion expander.
 
 Generates the full paths.
 
-*** Add guard generator to quilt.cpp                                  :story:
+*** COMPLETED Add guard generator to quilt.cpp                        :story:
+    CLOSED: [2016-09-26 Mon 18:17]
+    CLOCK: [2016-09-26 Mon 17:50]--[2016-09-26 Mon 18:17] =>  0:27
 
-Generates the header guards.
+Generates the header guards. Merged with path generator.
 
 *** Add aspect generator to quilt.cpp                                 :story:
 
