--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 18:52]
+#+CAPTION: Clock summary at [2016-09-26 Mon 21:04]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:53* |      |      | 100.0 |
+| *Total time*                                                                | *8:15* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:53   |      |      | 100.0 |
-| Active                                                                      |        | 7:53 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   8.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.5 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  31.7 |
-| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   4.2 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  22.4 |
-| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   4.7 |
-| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   4.0 |
-| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |  10.4 |
-| COMPLETED Add guard expander to quilt.cpp                                   |        |      | 0:27 |   5.7 |
-| COMPLETED Investigate borked travis build                                   |        |      | 0:15 |   3.2 |
-| STARTED Add decoration expander to quilt.cpp                                |        |      | 0:18 |   3.8 |
+| Stories                                                                     | 8:15   |      |      | 100.0 |
+| Active                                                                      |        | 8:15 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   8.1 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.4 |
+| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  30.3 |
+| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   4.0 |
+| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  21.4 |
+| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   4.4 |
+| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   3.8 |
+| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |   9.9 |
+| COMPLETED Add guard expander to quilt.cpp                                   |        |      | 0:27 |   5.5 |
+| COMPLETED Investigate borked travis build                                   |        |      | 0:37 |   7.5 |
+| STARTED Add decoration expander to quilt.cpp                                |        |      | 0:18 |   3.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -215,6 +215,7 @@ Generates the header guards. Merged with path generator.
 
 *** COMPLETED Investigate borked travis build                         :story:
     CLOSED: [2016-09-26 Mon 18:38]
+    CLOCK: [2016-09-26 Mon 20:43]--[2016-09-26 Mon 21:05] =>  0:22
     CLOCK: [2016-09-26 Mon 18:18]--[2016-09-26 Mon 18:33] =>  0:15
 
 We seem to have borked the build some how:
@@ -240,6 +241,9 @@ Problem reproduced locally, must have forgotten to run the tests.
 :
 : *** 4 failures are detected in the test module "knit_tests"
 : ninja: build stopped: subcommand failed.
+
+Actually, the problem persists. It seems this is related to clean
+builds. We seem to have lost service forward declarations.
 
 *** STARTED Add decoration expander to quilt.cpp                      :story:
     CLOCK: [2016-09-26 Mon 18:34]--[2016-09-26 Mon 18:52] =>  0:18
