--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,26 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 21:16]
+#+CAPTION: Clock summary at [2016-09-26 Mon 21:24]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:25* |      |      | 100.0 |
+| *Total time*                                                                | *8:30* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:25   |      |      | 100.0 |
-| Active                                                                      |        | 8:25 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   7.9 |
+| Stories                                                                     | 8:30   |      |      | 100.0 |
+| Active                                                                      |        | 8:30 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   7.8 |
 | COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.4 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  29.7 |
-| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   4.0 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  21.0 |
-| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   4.4 |
-| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   3.8 |
-| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |   9.7 |
+| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  29.4 |
+| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   3.9 |
+| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  20.8 |
+| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   4.3 |
+| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   3.7 |
+| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |   9.6 |
 | COMPLETED Add guard expander to quilt.cpp                                   |        |      | 0:27 |   5.3 |
 | COMPLETED Investigate borked travis build                                   |        |      | 0:37 |   7.3 |
+| COMPLETED Add decoration expander to quilt.cpp                              |        |      | 0:23 |   4.5 |
 | STARTED Run tests that are passing on windows                               |        |      | 0:10 |   2.0 |
-| STARTED Add decoration expander to quilt.cpp                                |        |      | 0:18 |   3.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -246,6 +246,13 @@ Problem reproduced locally, must have forgotten to run the tests.
 Actually, the problem persists. It seems this is related to clean
 builds. We seem to have lost service forward declarations.
 
+*** COMPLETED Add decoration expander to quilt.cpp                    :story:
+    CLOSED: [2016-09-26 Mon 21:24]
+    CLOCK: [2016-09-26 Mon 21:19]--[2016-09-26 Mon 21:24] =>  0:05
+    CLOCK: [2016-09-26 Mon 18:34]--[2016-09-26 Mon 18:52] =>  0:18
+
+Generates the decoration.
+
 *** STARTED Run tests that are passing on windows                     :story:
     CLOCK: [2016-09-26 Mon 21:06]--[2016-09-26 Mon 21:16] =>  0:10
 
@@ -255,11 +262,6 @@ moment. We should run all test suites that are green to ensure we
 don't regress without noticing.
 
 Look at the stories with errors to determine which tests are passing.
-
-*** STARTED Add decoration expander to quilt.cpp                      :story:
-    CLOCK: [2016-09-26 Mon 18:34]--[2016-09-26 Mon 18:52] =>  0:18
-
-Generates the decoration.
 
 *** Add aspect generator to quilt.cpp                                 :story:
 
