--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,26 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 21:24]
+#+CAPTION: Clock summary at [2016-09-26 Mon 22:51]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:30* |      |      | 100.0 |
+| *Total time*                                                                | *9:56* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:30   |      |      | 100.0 |
-| Active                                                                      |        | 8:30 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   7.8 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.4 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  29.4 |
-| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   3.9 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  20.8 |
-| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   4.3 |
-| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   3.7 |
-| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |   9.6 |
-| COMPLETED Add guard expander to quilt.cpp                                   |        |      | 0:27 |   5.3 |
-| COMPLETED Investigate borked travis build                                   |        |      | 0:37 |   7.3 |
-| COMPLETED Add decoration expander to quilt.cpp                              |        |      | 0:23 |   4.5 |
-| STARTED Run tests that are passing on windows                               |        |      | 0:10 |   2.0 |
+| Stories                                                                     | 9:56   |      |      | 100.0 |
+| Active                                                                      |        | 9:56 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   6.7 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.2 |
+| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  25.2 |
+| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   3.4 |
+| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  17.8 |
+| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   3.7 |
+| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   3.2 |
+| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |   8.2 |
+| COMPLETED Add guard expander to quilt.cpp                                   |        |      | 0:27 |   4.5 |
+| COMPLETED Investigate borked travis build                                   |        |      | 0:37 |   6.2 |
+| COMPLETED Add decoration expander to quilt.cpp                              |        |      | 0:23 |   3.9 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |        |      | 1:26 |  14.4 |
+| STARTED Run tests that are passing on windows                               |        |      | 0:10 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -253,6 +254,16 @@ builds. We seem to have lost service forward declarations.
 
 Generates the decoration.
 
+*** COMPLETED Add aspect expander to quilt.cpp                        :story:
+    CLOSED: [2016-09-26 Mon 22:51]
+    CLOCK: [2016-09-26 Mon 21:25]--[2016-09-26 Mon 22:51] =>  1:26
+
+Generates the aspect configuration.
+
+- first generate a container with aspect annotations.
+- then use it to compute aspect configurations; populate those
+  directly into the formattable.
+
 *** STARTED Run tests that are passing on windows                     :story:
     CLOCK: [2016-09-26 Mon 21:06]--[2016-09-26 Mon 21:16] =>  0:10
 
@@ -262,10 +273,6 @@ moment. We should run all test suites that are green to ensure we
 don't regress without noticing.
 
 Look at the stories with errors to determine which tests are passing.
-
-*** Add aspect generator to quilt.cpp                                 :story:
-
-Generates the aspect configuration.
 
 *** Add helper generator to quilt.cpp                                 :story:
 
