--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,27 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-26 Mon 22:51]
-| <75>                                                                        |        |      |      |       |
-| Headline                                                                    | Time   |      |      |     % |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *9:56* |      |      | 100.0 |
-|-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 9:56   |      |      | 100.0 |
-| Active                                                                      |        | 9:56 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:40 |   6.7 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:07 |   1.2 |
-| COMPLETED Generation of formattable is incorrect                            |        |      | 2:30 |  25.2 |
-| COMPLETED Visitor includes are incorrect                                    |        |      | 0:20 |   3.4 |
-| COMPLETED Add includer to quilt.cpp                                         |        |      | 1:46 |  17.8 |
-| COMPLETED Add reducer to quilt.cpp                                          |        |      | 0:22 |   3.7 |
-| COMPLETED Add new index to formtter container                               |        |      | 0:19 |   3.2 |
-| COMPLETED Add path expander to quilt.cpp                                    |        |      | 0:49 |   8.2 |
-| COMPLETED Add guard expander to quilt.cpp                                   |        |      | 0:27 |   4.5 |
-| COMPLETED Investigate borked travis build                                   |        |      | 0:37 |   6.2 |
-| COMPLETED Add decoration expander to quilt.cpp                              |        |      | 0:23 |   3.9 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |        |      | 1:26 |  14.4 |
-| STARTED Run tests that are passing on windows                               |        |      | 0:10 |   1.7 |
+#+CAPTION: Clock summary at [2016-09-27 Tue 09:46]
+| <75>                                                                        |         |       |      |       |
+| Headline                                                                    | Time    |       |      |     % |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| *Total time*                                                                | *11:22* |       |      | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+------+-------|
+| Stories                                                                     | 11:22   |       |      | 100.0 |
+| Active                                                                      |         | 11:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:40 |   5.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   1.0 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  22.0 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   2.9 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  15.5 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   3.2 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.8 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   7.2 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   4.0 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   5.4 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   3.4 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  12.6 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.5 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  12.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -264,7 +265,8 @@ Generates the aspect configuration.
 - then use it to compute aspect configurations; populate those
   directly into the formattable.
 
-*** STARTED Run tests that are passing on windows                     :story:
+*** COMPLETED Run tests that are passing on windows                   :story:
+    CLOSED: [2016-09-27 Tue 08:19]
     CLOCK: [2016-09-26 Mon 21:06]--[2016-09-26 Mon 21:16] =>  0:10
 
 At present we have a release build on windows but we are not running
@@ -274,9 +276,15 @@ don't regress without noticing.
 
 Look at the stories with errors to determine which tests are passing.
 
-*** Add helper generator to quilt.cpp                                 :story:
+*** COMPLETED Add helper expander to quilt.cpp                        :story:
+    CLOSED: [2016-09-27 Tue 09:46]
+    CLOCK: [2016-09-27 Tue 08:19]--[2016-09-27 Tue 09:45] =>  1:26
 
 Generates the helper configuration.
+
+*** Merge pre and post workflows                                      :story:
+
+It seems we don't have much of a post reduction workflow. Merge them.
 
 *** Hook formattables into formatters                                 :story:
 
