--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,28 +13,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-27 Tue 09:46]
+#+CAPTION: Clock summary at [2016-09-27 Tue 10:03]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:22* |       |      | 100.0 |
+| *Total time*                                                                | *11:38* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:22   |       |      | 100.0 |
-| Active                                                                      |         | 11:22 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:40 |   5.9 |
+| Stories                                                                     | 11:38   |       |      | 100.0 |
+| Active                                                                      |         | 11:38 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:40 |   5.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   1.0 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  22.0 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  21.5 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   2.9 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  15.5 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  15.2 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   3.2 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.8 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   7.2 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   4.0 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   5.4 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   3.4 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  12.6 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.5 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  12.6 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.7 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   7.0 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   3.9 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   5.3 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   3.3 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  12.3 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.4 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  12.3 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   2.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -282,7 +283,9 @@ Look at the stories with errors to determine which tests are passing.
 
 Generates the helper configuration.
 
-*** Merge pre and post workflows                                      :story:
+*** COMPLETED Merge pre and post workflows                            :story:
+    CLOSED: [2016-09-27 Tue 10:03]
+    CLOCK: [2016-09-27 Tue 09:47]--[2016-09-27 Tue 10:03] =>  0:16
 
 It seems we don't have much of a post reduction workflow. Merge them.
 
