--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -13,29 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-09-27 Tue 10:13]
+#+CAPTION: Clock summary at [2016-09-27 Tue 10:58]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:47* |       |      | 100.0 |
+| *Total time*                                                                | *12:30* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:47   |       |      | 100.0 |
-| Active                                                                      |         | 11:47 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   6.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   1.0 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  21.2 |
-| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   2.8 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  15.0 |
-| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   3.1 |
-| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.7 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   6.9 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   3.8 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   5.2 |
-| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   3.3 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  12.2 |
-| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.4 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  12.2 |
-| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   2.3 |
+| Stories                                                                     | 12:30   |       |      | 100.0 |
+| Active                                                                      |         | 12:30 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:49 |   6.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.9 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |  20.0 |
+| COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   2.7 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |  14.1 |
+| COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   2.9 |
+| COMPLETED Add new index to formtter container                               |         |       | 0:19 |   2.5 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   6.5 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   3.6 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   4.9 |
+| COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   3.1 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |  11.5 |
+| COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   1.3 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |  11.5 |
+| COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   2.1 |
+| COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   2.0 |
+| STARTED Investigate element annotation support                              |         |       | 0:28 |   3.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -406,6 +408,14 @@ Merged stories:
 At present it is possible to register a formatter name more than
 once. Registrar should keep track of the names and throw if the name
 is duplicated.
+
+*** COMPLETED Fix bug in aspect and helper generation                 :story:
+    CLOSED: [2016-09-27 Tue 10:58]
+    CLOCK: [2016-09-27 Tue 10:43]--[2016-09-27 Tue 10:58] =>  0:15
+
+It seems we are updating non-target types for these configurations but
+we weren't before. This caused a break in the verification that
+somehow was not spotted.
 
 *** STARTED Investigate element annotation support                    :story:
     CLOCK: [2016-09-27 Tue 10:14]--[2016-09-27 Tue 10:42] =>  0:28
